# ai-security-summer-school

./: .gitignore  README.md  pyproject.toml  requirements.txt
tutorial_01_ml_basics/: Intro_LLMs_Sol.ipynb  Intro_ML.ipynb  Intro_ML_Sol.ipynb  excursion_llms.ipynb  intro_to_llms_tutorial.ipynb  ml_basics.ipynb
tutorial_01_ml_basics/data/: DATA.ipynb  crows_pairs_sample.csv  crows_pairs_sample.json  dolly_50_sample.csv  dolly_50_sample.json  dolly_classification_50.csv  dolly_classification_50.json  imdb_100_balanced.csv  imdb_100_balanced.json  imdb_50_sample.csv  imdb_50_sample.json
tutorial_02_federated_learning/: FL Tutorial Solution.ipynb  FL Tutorial.ipynb
tutorial_03_deepfakes/: Audio_model_attribution.ipynb  ai-generated-image-detection-solutions.ipynb  ai-generated-image-detection.ipynb  ai_generated_audio_detection.ipynb  watermarking-for-ai-generated-images.ipynb  watermarking_implementation_tutorial.ipynb  wmdemo.ipynb
