[project]
name = "ai-security-summer-school-25"
version = "0.0.1"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }